# test-ai

./: .env.example  .gitignore  IMPLEMENTATION.md  QUICKSTART.md  README.md  init.sh  pyproject.toml  requirements.txt  run_api.sh  run_dashboard.sh  test_basic.py
app/: main.py
config/: prompts.example.json  settings.example.yaml
src/: main.py
src/test_ai/: __init__.py  api.py  main.py
src/test_ai/api_clients/: __init__.py  github_client.py  gmail_client.py  notion_client.py  openai_client.py
src/test_ai/auth/: __init__.py  token_auth.py
src/test_ai/config/: __init__.py  settings.py
src/test_ai/dashboard/: __init__.py  app.py
src/test_ai/orchestrator/: __init__.py  workflow_engine.py
src/test_ai/prompts/: __init__.py  template_manager.py
src/test_ai/workflows/: email_to_notion.json  generate_sop_to_github.json  simple_ai_completion.json  test_save_workflow.json
